--- a/src/assets/scss/container.scss
+++ b/src/assets/scss/container.scss
@@ -1,9 +1,11 @@
 @import '_mixins';
 
 .section-container {
-	width: var(--section-container-width);
+	// width: var(--section-container-width);
+	box-sizing: border-box;
+	width: 100%;
 	margin: auto;
-	background-color: rgb(255, 255, 255);
+	background-color: rgb(36, 202, 50);
 	padding: 30px;
 	@include no-border-rounded-corners(30px);
 }
