--- a/src/assets/scss/container.scss
+++ b/src/assets/scss/container.scss
@@ -1,11 +1,23 @@
 @import '_mixins';
 
 .section-container {
-	// width: var(--section-container-width);
 	box-sizing: border-box;
 	width: 100%;
+	max-width: 768px;
 	margin: auto;
 	background-color: rgb(36, 202, 50);
 	padding: 30px;
 	@include no-border-rounded-corners(30px);
+}
+
+
+.card-container {
+	box-sizing: border-box;
+	width: 100%;
+	max-width: 768px;
+	height: 400px;
+	margin: auto;
+	background-color: rgb(36, 202, 50);
+	padding: 30px;
+	margin-top: 125px;
 }
