--- a/src/assets/scss/container.scss
+++ b/src/assets/scss/container.scss
@@ -7,27 +7,48 @@ $in-view-position: 100px;
 	height: 400px;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: rgb(36, 202, 50);
+	background-color: rgba(36, 202, 50, 0);
 	padding: 15px;
 	position: absolute;
 	top: $in-view-position;
 	left: $page-padding;
 	right: $page-padding;
 	transition: top 2s, opacity 1s;
+	display: flex;
+	flex-direction: column;
 	.card-title {
+		transition: opacity 1s;
 		text-align: center;
+		line-height: 40px;
+	}
+	.card-sub-title {
+		transition: opacity 1s 0.25s;
+		text-align: center;
+	}
+	.card-content {
+		transition: opacity 1s 0.5s;
+		background-color: white;
+		height: 100%;
 	}
 }
 
 .up {
 	top: $in-view-position - 50px;
-	opacity: 0;
+	// opacity: 0;
 }
 .in-view {
 	top: $in-view-position;
-	opacity: 1;
+	// opacity: 1;
 }
 .down {
 	top: $in-view-position + 50px;
+	// opacity: 0;
+}
+
+.fade-out {
 	opacity: 0;
+}
+
+.fade-in {
+	opacity: 1;
 }
